# nbites

src/man/log/: logio.cpp  logio.h
src/man/vision/: .HoughLine.h.swp  .VisionModule.cpp.swp  .VisionModule.h.swp  CMakeCache.txt  CMakeLists.txt  FieldLine.h  FieldLinesDetector.cpp  FieldLinesDetector.h  FixedCameraParams.h  FuzzyLogic.cpp  FuzzyLogic.h  Gradient.cpp  Gradient.h  HoughLine.cpp  HoughLine.h  HoughSpace.h  HoughSpaceImpl.h  HoughVisualLine.cpp  HoughVisualLine.h  Makefile  Util.h  Utility.cpp  Utility.h  VisionModule.cpp  VisionModule.h  VisualLine.h  WeightedFit.cpp  WeightedFit.h  cmake_install.cmake
src/man/vision/FieldLines/: FieldLinesDetector.cpp  FieldLinesDetector.h  HoughSpaceImpl.cpp  HoughVisualLine.h
src/man/vision/geom/: HoughLine.cpp  HoughLine.h
src/nbcross/: .nbfuncs.cpp.swp  nbfuncs.cpp
src/nbtool/src/messages/: VisionFieldOuterClass.java
src/nbtool/src/nbtool/gui/logviews/images/: HoughTest.java
src/nbtool/src/nbtool/util/: U.java
src/share/messages/: .Images.h.swp  VisionField.proto
src/share/portals/: RoboGrams.h
